test/tests/compiler/16_characters_and_strings/valid/strings_as_lvalues/empty_string.plx
#  Test that we add a terminating null byte to the empty string 
pub fn main(none) i32 {
    empty: *char = ""
    return empty[0]
}
