test/tests/compiler/16_characters_and_strings/invalid_types/string_initializer_too_long.plx
#  You can't initialize a char array from a string literal
#  * that's too long to fit in it 
pub fn main(none) i32 {
    too_long: [3]char = "abcd"
    return 0
}
